app/private/styles/main.css
/*use percentage for images*/
/*use em for fonts*/
/*pixel to em conversition*/
/*
1 px    0.0625 em
2 px    0.125 em
3 px    0.1875 em
4 px    0.25 em
5 px    0.3125 em
6 px    0.375 em
7 px    0.4375 em
8 px    0.5 em
9 px    0.5625 em
10 px   0.625 em
11 px   0.6875 em
12 px   0.75 em
13 px   0.8125 em
14 px   0.875 em
15 px   0.9375 em
16 px   1 em
17 px   1.0625 em
18 px   1.125 em
19 px   1.1875 em
20 px   1.25 em
21 px   1.313em
22 px   1.375em
23 px   1.438em
24 px   1.500em
25 px   1.5625 em
30 px   1.875 em 
40 px   2.5 em
50 px   3.125 em

*/
/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}
body {
  margin: 0;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
  display: block;
}
audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline;
}
audio:not([controls]) {
  display: none;
  height: 0;
}
[hidden],
template {
  display: none;
}
a {
  background: transparent;
}
a:active,
a:hover {
  outline: 0;
}
abbr[title] {
  border-bottom: 1px dotted;
}
b,
strong {
  font-weight: bold;
}
dfn {
  font-style: italic;
}
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}
mark {
  background: #ff0;
  color: #000;
}
small {
  font-size: 80%;
}
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sup {
  top: -0.5em;
}
sub {
  bottom: -0.25em;
}
img {
  border: 0;
}
svg:not(:root) {
  overflow: hidden;
}
figure {
  margin: 1em 40px;
}
hr {
  box-sizing: content-box;
  height: 0;
}
pre {
  overflow: auto;
}
code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
button,
input,
optgroup,
select,
textarea {
  color: inherit;
  font: inherit;
  margin: 0;
}
button {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
button,
html input[type="button"] {
  -webkit-appearance: button;
  cursor: pointer;
}
button[disabled],
html input[disabled] {
  cursor: default;
}
button input::-moz-focus-inner {
  border: 0;
  padding: 0;
}
input {
  line-height: normal;
}
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}
input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}
input[type="search"] {
  -webkit-appearance: textfield;
  box-sizing: content-box;
}
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}
legend {
  border: 0;
  padding: 0;
}
textarea {
  overflow: auto;
}
optgroup {
  font-weight: bold;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
td,
th {
  padding: 0;
}
/*sunbird light font*/
@font-face {
  font-family: 'sunbirdlightfont';
  src: url('../fonts/OpenSans-Light.ttf') format('truetype');
}
/*sunbird Regular font*/
@font-face {
  font-family: 'sunbirdregularfont';
  src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
}
/*sunbird Medium font*/
@font-face {
  font-family: 'sunbirdmediumfont';
  src: url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
}
/*sunbird Bold font*/
@font-face {
  font-family: 'sunbirdboldfont';
  src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
}
/*cards fonts*/
.cardsHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1.25em;
}
.cardsSubHeading {
  font-family: 'sunbirdregularfont' !important;
  font-size: 1.125em;
  color: #0076FE !important;
}
.cardsDescription {
  font-family: 'sunbirdregularfont' !important;
  font-size: 1.0625em;
  font-weight: 400;
  line-height: 1.4;
  color: black !important;
}
/* font used for view all and read more*/
.cardsKnowMore {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1em;
  color: #0076FE;
}
/* cards used in slider fonts*/
.sliderCardHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1.1875em !important;
}
.sliderCardDesc {
  font-family: 'sunbirdregularfont' !important;
  font-size: 1em !important;
  color: #8b8b8c !important;
}
.sliderCardSubDesc {
  font-family: 'sunbirdregularfont' !important;
  font-size: 0.875em !important;
  color: grey !important;
}
/* segment card fonts*/
.segmentCardHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1.313em !important;
}
.segmentAvatarDesc {
  font-family: 'sunbirdregularfont' !important;
  font-size: 1.0625em !important;
  color: rgba(0, 0, 0, 0.85) !important;
}
.segmentAvatarSubDesc {
  font-family: 'sunbirdregularfont' !important;
  font-size: 0.9375em !important;
  color: #7c7b7b !important;
}
.segmentCardSubDesc {
  font-family: 'sunbirdregularfont' !important;
  font-size: 1.0625em !important;
}
/*course structure page fonts*/
.courseStructureSectionHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1.9em !important;
}
.courseStructureHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 0.955em !important;
}
.courseStructureDesc {
  font-family: 'sunbirdregularfont' !important;
  font-size: 0.75em !important;
}
/*course structure accordian fonts*/
.courseAccordianHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1.1875 !important;
}
.courseAccordianDesc {
  font-family: 'sunbirdregularfont' !important;
  font-size: 1.125em !important;
}
.courseAccordianSubDesc {
  font-family: 'sunbirdboldfont' !important;
  font-size: 0.9375em !important;
}
.segmentCardHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1.438em !important;
}
/*home page fonts*/
.HomeAccordianHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1.375em !important;
}
/*section heading fonts*/
.sectionHeading {
  font-family: 'sunbirdboldfont' !important;
  font-size: 1.375em !important;
}
/* ... */

